finilised winner page, refined the media queries for small screens, added colors to winner and game page, fixed alignment issues

--- a/static/scss/elements.scss
+++ b/static/scss/elements.scss
@@ -72,32 +72,32 @@
     border-radius: 10px;
     border: 5px double black;
     margin-left: 10px;
+    position: relative;
 
-    .deck_house {
-        position: relative;
+    // .deck_house {
 
-        .house_banner {
-            width: 100%;
-            height: 100%;
-            top: 0px;
-            left: 0px;
-            z-index: 10;
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 6px;
-            background-color: rgba(0, 0, 0, 0.7);
+    .house_banner {
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: 10;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+        background-color: rgba(0, 0, 0, 0.7);
 
-            p {
-                font-size: 120px;
-                font-weight: 700;
-                color: map-get($color, mustard);
-                padding: 0px;
-                margin: 0px;
-            }
+        p {
+            font-size: 120px;
+            font-weight: 700;
+            color: map-get($color, mustard);
+            padding: 0px;
+            margin: 0px;
         }
     }
+    // }
     
     .house_counter {
         background: black;
@@ -192,8 +192,8 @@
 }
 
 .results {
-    @include scoreBoard(800,
-    220,
+    @include scoreBoard(100%,
+    100%,
     black,
     yellow,
     bold,
@@ -214,7 +214,13 @@
         align-self: center;
         border: 5px dotted yellow;
         border-radius: 10px;
-        padding: 35px;
+        padding: 5px;
+        white-space: normal;
+        margin: 20px;
+        width: 100%;
+        height: 100%;
+        
+        
         p {
             font-size: 70px;
         }
