--- a/static/scss/mediaQ.scss
+++ b/static/scss/mediaQ.scss
@@ -1,61 +1,145 @@
-// @include mQ("maxW", 1000px) {
+@include mQ("maxW", 700px) {
+
+    .wrapper-game {
+        flex-flow: column-reverse nowrap
+    }
 
 
-//     /*   welcome message */
-//     .welcome {
-//         display: none;
-//     }
-
-//     /*   scoreboard */
-//     .scoreboard {
-//         width: 540px;
-//         height: 226px;
-//         align-items: flex-start;
-//         flex-flow: row nowrap;
-//     }
-
-//     /*   house */
-//     .house {
-
-//         .deck_house {
-
-//             .house_banner {
-//                 background-color: rgba(0, 0, 0, 0.4);
-//                 p {
-//                     font-size: 70px;
-//                 }
-//             }
-
-//         }
-//         .house_counter {
-//             width: 50px;
-//             p {
-//                 margin-bottom: 0;
-//                 font-size: 25px;
-//                 font-weight: bold;
-//                 text-auto: center;
-//             }
-//         }
-
-//         img {
-//             width: 70px;
-//         }
-//     }
-
-
-// }
-
-
-@include mQ("maxW", 600px) {
+    /*   welcome message */
     .welcome {
         display: none;
     }
-    .wrapper-game {
+
+
+    .upper-half {
         display: flex;
-        flex-flow: column nowrap;
+        flex-flow: column-reverse nowrap;
+
+        /*   scoreboard*/
+        .scoreboard {
+            width: 100%;
+            height: 100%;
+            margin: 0 5px 5px 5px;
+
+            .scores-section {
+                padding-top: 5px;
+
+            }
+
+            .verdict {
+                margin-top: 15px;
+                width: 100%;
+                height: 100%;
+            }
+
+        }
+
+        /*   house */
+        .house {
+            margin-bottom: 5px;
+            flex-flow: row wrap;
+            align-items: center;
+            justify-content: space-evenly;
+
+            .house_counter {
+                width: 100%;
+                margin: 0px;
+                margin-top: 20px;
+                p {
+                    font-size: 30px;
+                }
+            }
+            .deck_house {
+
+                img {
+                    width: 100px;
+                    margin: 2.5px;
+                }
+
+                .house_banner {
+                    p {
+                        font-size: 60px;
+                    }
+                }
+            }
+
+        }
+
     }
-    
-    
-    
-    
+
+
+    .deck_player {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: flex-start;
+        justify-content: center;
+        img {
+            margin: 2.5px;
+            width: 100px;
+        }
+    }
+
+    .player_banner {
+        p {
+            font-size: 60px;
+        }
+    }
+
+    .player_selections {
+        flex-flow: column;
+        align-items: center;
+
+        .console {
+            margin: 10px auto;
+        }
+    }
+
+
+    .results {
+        flex-flow: row wrap;
+        .results-right {
+
+            p {
+                font-size: 40px;
+            }
+
+        }
+        .results-left {
+            margin: 10px;
+        }
+
+    }
+
+    #reset,
+    #next {
+        width: 200px;
+        height: 51px;
+    }
+
+
+
+
+}
+
+
+@include mQ("mixW", 701px) {
+    .upper-half {
+        display: flex;
+        flex-flow: column-reverse nowrap;
+    }
+
+    .lower-half {
+        // to add
+        .player {
+            flex: 1
+        }
+
+
+    }
+
+
+
+
+
+
 }
